--- a/1- newbie/qr-code-component-main/project/style.css
+++ b/1- newbie/qr-code-component-main/project/style.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
 }
 p {
     font-size: 15px;
@@ -26,11 +26,11 @@ p {
 
 .qr-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    width: 20%;
-    height: 70%;
+    width: 300px;
+    height: 450px;
     background-color: red;
     border-radius: 15px;
     -webkit-border-radius: 15px;
@@ -46,11 +46,11 @@ p {
     text-align: center;
     font-weight: 700;
     color: var(--Dark_blue);
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
     width: 95%;
 }
 .actual_qr {
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 .actual_qr img{
     width: 100%;
